# idpy-oidc

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  Makefile  README.md  pylama.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: python-app.yml
archdoc/: mkdocs.yml
archdoc/docs/: client.md  client_code.md  index.md  intro.md  message.md  persistence.md  server.md
demo/: README.md  common.py  flow.py  oauth2_add_on_dpop.py  oauth2_add_on_jar.py  oauth2_add_on_par.py  oauth2_add_on_pkce.py  oauth2_cc.py  oauth2_client_conf.py  oauth2_code.py  oauth2_ropc.py  oauth2_server_conf.py  oauth2_token_exchange.py  oauth2_token_refresh.py  oauth2_token_revocation.py  oidc_add_on_dpop.py  oidc_client_conf.py  oidc_code.py  oidc_code_claims.py  oidc_code_dyn_reg.py  oidc_code_id_token.py  oidc_id_token.py  oidc_server_conf.py  server_conf_oauth2.py  utils.py
doc/: Makefile  conf.py  index.rst  intro.rst  make.bat  move.rst
doc/client/: config.rst  index.rst  oidcrp.oidc.rst  rp_handler.rst
doc/message/: index.rst  intro.rst  message.rst  time_util.rst
doc/server/: conf.py  index.rst
example/: entity.py
example/flask_as/: config.json
example/flask_op/: README.md  application.py  config copy.json  config.json  config_test.json  passwd.json  requirements.txt  server.py  users.json  views.py
example/flask_rp/: application.py  conf.json  config.json  requirements.txt  run.sh  views.py  wsgi.py
patch/: alg_info.patch  claims.patch  metadata.patch  oauth2.patch  oidc.patch  test_client_30.patch  tests.patch  transform.patch
private/actor/: __init__.py
private/xmetadata/: __init__.py  oauth2.py  oidc.py
script/: client_config.py  rp_handler_config.py
src/idpyoidc/: __init__.py  alg_info.py  claims.py  configure.py  constant.py  context.py  converter.py  defaults.py  encrypter.py  entity.py  exception.py  impexp.py  item.py  key_import.py  logging.py  metadata.py  node.py  (+4 more)
tests/: .gitignore  Xtest_10_identity_assurance_represent.py  Xtest_10_identity_assurance_request.py  __init__.py  create_tests.py  entity_conf.json  entity_conf.py  op_config.json  priv_client.jwks  priv_iss.jwks  pub_client.jwks  pub_iss.jwks  request123456.jwt  rp_conf.json  rp_conf_2.json  rph_conf_3.json  server_conf.json  srv_config.json  test_01_util.py  test_03_time_util.py  test_04_message.py  test_05_oauth2.py  test_06_oidc.py  test_07_session.py  test_08_transform.py  test_09_work_condition.py  test_10_identity_assurance.py  test_10_identity_assurance_represent.py  test_10_identity_assurance_request.py  test_11_impexp.py  test_12_context.py  test_13_dump_item.py  test_14_read_only_list_file.py  test_20_config.py  test_21_abfile.py  test_21_abfile_no_cache.py  test_22_backchannel.py  test_30_identity_assurance_response.py  test_client_00_current.py  test_client_00_state.py  (+113 more)
(+497 files in other folders)
