[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[metadata]
name = "idpyoidc"
version = "3.0.0"
author = "Roland Hedberg"
author_email = "roland@catalogix.se"
description = "Everything OAuth2 and OIDC"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/IdentityPython/idpy-oidc"
license = "Apache-2.0"
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[options]
package_dir = "src"
packages = "find:"
python= "^3.8"

[tool.black]
line-length = 100

[tool.isort]
force_single_line = true
known_first_party = "idpyoidc"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]
